--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h2>Основная информация</h2>
                 <p>Черр (также известная как Cherru) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a> по причине того, что, как она сказала "завершила свою цель в нем". Её Телеграм-группа <a href="https://t.me/cherru_alley">Корзинка Вишни</a> заброшена.</p>
                 <p>29 мая 2024 года написала пост в своём <a href="https://t.me/s/cherru_alley">телеграм-канале</a> "ХАЙ ЧАТ!!! (я знаю что чата тут нет лол)".</p>
+                <p>Также она стала выкладывать арты на свой <a href="https://t.me/s/cherru_alley">телеграм-канал</a></p>
             </div>
             <div class="infobox">
                 <h2>Черр</h2>
