--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
         .dark-theme .infobox td {
             border-bottom-color: rgba(255, 156, 194, 0.3);
         }
+        .light-theme .infobox {
+            background-color: rgba(255, 255, 255, 0.9); /* Добавлено для светлой темы */
+        }
         @media (max-width: 768px) {
             .sidebar {
                 width: 0;
@@ -306,13 +309,14 @@
             .infobox {
                 width: 100%;
                 margin-top: 20px;
+                margin-bottom: 20px; /* Добавлено для отступа снизу */
             }
             .main-info {
                 margin-right: 0;
-                order: 2; /* Перемещаем основной контент на второе место */
+                order: 2; 
             }
             .infobox {
-                order: 1; /* Перемещаем инфобокс на первое место */
+                order: 1; 
             }
         }
     </style>
@@ -340,7 +344,6 @@
                 <a href="https://visneviye-allei-wiki.github.io/wiki/">
                     <img src="images/bannerwiki.png" alt="Вишневые Аллеи Вики">
                 </a>
-                <h1>Черр</h1>
             </header>
 
             <div class="divider"></div>
@@ -348,14 +351,14 @@
             <div class="content-wrapper">
                 <main class="main-info">
                     <h2>Основная информация</h2>
-                    <p>Черр (также известная как Cherru) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a> . Её Телеграм-канал <a href="https://t.me/cherru_alley">Корзинка Вишни</a> заброшена.</p>
+                    <p>Черр (также известная как Cherru или же Твинкл) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a>.</p>
                     <p>29 мая 2024 года написала пост в своём <a href="https://t.me/s/cherru_alley">телеграм-канале</a> "ХАЙ ЧАТ!!! (я знаю что чата тут нет лол)".</p>
                     <p>Также она стала выкладывать арты на свой <a href="https://t.me/s/cherru_alley">телеграм-канал</a></p>
                     <p>Также она стала делать анимации на своем <a href="https://www.youtube.com/@cherru_">ютуб-канале</a></p>
                 </main>
 
                 <aside class="infobox">
-                    <h2>Черр</h2>
+                    <h2>Черр (Твинкл)</h2>
                     <img src="images/cherru.png" alt="Черр" class="avatar">
                     <table>
                         <tr>
