--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         .light-theme .infobox {
             background-color: rgba(255, 255, 255, 0.9); 
         }
-        .light-theme .infobox h2, .light-theme .infobox p, .light-theme .infobox td { /* Добавлен фон для всех элементов */
+        .light-theme .infobox h2, .light-theme .infobox p, .light-theme .infobox td { 
             background-color: #ff9cc2; 
             padding: 5px 10px;
             color: #fff; 
@@ -333,9 +333,13 @@
             .infobox {
                 margin-right: 0; 
             }
+            .main-info, .infobox {
+                width: 100%; /* Занимаем всю ширину на мобильных */
+                box-sizing: border-box; /* Включаем padding в ширину */
+            }
             .main-info p {
-                overflow: hidden; /* Скрываем текст за пределами линии */
-                text-overflow: ellipsis; /* Добавляем многоточие */
+                overflow: hidden; 
+                text-overflow: ellipsis; 
                 white-space: nowrap;
             }
         }
@@ -364,6 +368,7 @@
                 <a href="https://visneviye-allei-wiki.github.io/wiki/">
                     <img src="images/bannerwiki.png" alt="Вишневые Аллеи Вики">
                 </a>
+                <h1>Черр</h1>
             </header>
 
             <div class="divider"></div>
@@ -371,19 +376,19 @@
             <div class="content-wrapper">
                 <main class="main-info">
                     <h2>Основная информация</h2>
-                    <p>Черр (также известная как Cherru или же Твинкл) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a>.
+                    <p>Черр (также известная как Cherru) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a> . Её Телеграм-канал <a href="https://t.me/cherru_alley">Корзинка Вишни</a> заброшена.</p>
                     <p>29 мая 2024 года написала пост в своём <a href="https://t.me/s/cherru_alley">телеграм-канале</a> "ХАЙ ЧАТ!!! (я знаю что чата тут нет лол)".</p>
                     <p>Также она стала выкладывать арты на свой <a href="https://t.me/s/cherru_alley">телеграм-канал</a></p>
                     <p>Также она стала делать анимации на своем <a href="https://www.youtube.com/@cherru_">ютуб-канале</a></p>
                 </main>
 
                 <aside class="infobox">
-                    <h2>Черр (Твинкл)</h2>
+                    <h2>Черр</h2>
                     <img src="images/cherru.png" alt="Черр" class="avatar">
                     <table>
                         <tr>
                             <td>Должность</td>
-                            <td>Бывшая владелица</td>
+                            <td>Бывшая владелец</td>
                         </tr>
                         <tr>
                             <td>Дата рождения</td>
