--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             text-decoration: none;
             border-radius: 5px;
             transition: all 0.3s ease;
-            overflow: hidden; 
-            text-overflow: ellipsis; 
+            overflow: hidden;
+            text-overflow: ellipsis;
             white-space: nowrap;
         }
         .light-theme .navigation a {
@@ -334,19 +334,20 @@
                 margin-right: 0; 
             }
             .main-info, .infobox {
-                width: 100%;
+                width: 100%; 
                 box-sizing: border-box;
             }
             .main-info p {
-                overflow: hidden; 
-                text-overflow: ellipsis; 
-                white-space: nowrap;
+                overflow-wrap: break-word; /* Разрешаем перенос слов */
             }
             .infobox p {
-                overflow-wrap: break-word; /* Разрешаем перенос слов */
+                overflow-wrap: break-word; 
             }
             .infobox td {
-                overflow-wrap: break-word; /* Разрешаем перенос слов */
+                overflow-wrap: break-word; 
+            }
+            .infobox h2, .infobox p, .infobox td {
+                word-break: break-all; /* Разрешаем перенос слов */
             }
         }
     </style>
