--- a/index.html
+++ b/index.html
@@ -375,7 +375,6 @@
                 <a href="https://visneviye-allei-wiki.github.io/wiki/">
                     <img src="images/bannerwiki.png" alt="Вишневые Аллеи Вики">
                 </a>
-                <h1>Черр</h1>
             </header>
 
             <div class="divider"></div>
@@ -383,19 +382,19 @@
             <div class="content-wrapper">
                 <main class="main-info">
                     <h2>Основная информация</h2>
-                    <p>Черр (также известная как Cherru) - Бывшая владелец сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a> . Её Телеграм-канал <a href="https://t.me/cherru_alley">Корзинка Вишни</a> заброшена.</p>
+                    <p>Черр (также известная как Cherru или же Твинкл) - Бывшая владелица сервера. Имеет заброшенный канал на ютубе (<a href="https://www.youtube.com/@cherru_">cherru</a>), на который выкладывала анимации по сюжетным сезонам <a href="https://youtube.com/@mrlololoshka">Лололошки</a>. Большая часть её активности в дискорде была на <a href="https://visneviye-allei-wiki.github.io/Wiki/">Вишневых Аллеях</a>. Уже достаточно давно Черр удалила свой аккаунт в дискорде, и больше не проявляла активности. Она покинула но вернулась через пол года в фандом <a href="https://youtube.com/@mrlololoshka">Лололошки</a>.
                     <p>29 мая 2024 года написала пост в своём <a href="https://t.me/s/cherru_alley">телеграм-канале</a> "ХАЙ ЧАТ!!! (я знаю что чата тут нет лол)".</p>
                     <p>Также она стала выкладывать арты на свой <a href="https://t.me/s/cherru_alley">телеграм-канал</a></p>
                     <p>Также она стала делать анимации на своем <a href="https://www.youtube.com/@cherru_">ютуб-канале</a></p>
                 </main>
 
                 <aside class="infobox">
-                    <h2>Черр</h2>
+                    <h2>Черр (Твинкл)</h2>
                     <img src="images/cherru.png" alt="Черр" class="avatar">
                     <table>
                         <tr>
                             <td>Должность</td>
-                            <td>Бывшая владелец</td>
+                            <td>Бывшая владелица</td>
                         </tr>
                         <tr>
                             <td>Дата рождения</td>
